2005-04-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.ac:
	* gst-libs/gst/Makefile.am:
	* gst-libs/gst/media-info/.cvsignore:
	* gst-libs/gst/media-info/Makefile.am:
	* gst-libs/gst/media-info/README:
	* gst-libs/gst/media-info/media-info-priv.c:
	* gst-libs/gst/media-info/media-info-priv.h:
	* gst-libs/gst/media-info/media-info-test.c:
	* gst-libs/gst/media-info/media-info.c:
	* gst-libs/gst/media-info/media-info.h:
	* gst-libs/gst/media-info/media-info.vcproj:
	* pkgconfig/Makefile.am:
	* pkgconfig/gstreamer-media-info-uninstalled.pc.in:
	* pkgconfig/gstreamer-media-info.pc.in:
	  Remove media-info, which is also successed by playbin (see Totem
	  implementation).

2005-04-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.ac:
	* examples/Makefile.am:
	* examples/gstplay/.cvsignore:
	* examples/gstplay/Makefile.am:
	* examples/gstplay/player.c:
	* gst-libs/gst/Makefile.am:
	* gst-libs/gst/play/.cvsignore:
	* gst-libs/gst/play/Makefile.am:
	* gst-libs/gst/play/play.c:
	* gst-libs/gst/play/play.h:
	* gst-libs/gst/play/play.vcproj:
	* pkgconfig/Makefile.am:
	* pkgconfig/gstreamer-play-uninstalled.pc.in:
	* pkgconfig/gstreamer-play.pc.in:
	  Remove libgstplay, playbin is now the official successor.

2005-04-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.ac:
	* gst-libs/gst/Makefile.am:
	* gst-libs/gst/xwindowlistener/Makefile.am:
	* gst-libs/gst/xwindowlistener/xwindowlistener.c:
	* gst-libs/gst/xwindowlistener/xwindowlistener.h:
	  Remove deprecated xwindowlistener (I've moved xwindowlistening
	  in the v4l/v4l2 plugins over to serverside).

2005-04-25  David Schleef  <ds@schleef.org>

	* examples/dynparams/Makefile.am: Move demo-dparams from gst/sine
	to examples/dynparams.  Examples do not belong interspersed with
	source code.
	* examples/dynparams/demo-dparams.c:
	* gst/sine/Makefile.am:
	* gst/sine/demo-dparams.c:

2005-04-25  David Schleef  <ds@schleef.org>
