@@ -1,11 +1,10 @@
-
 #plugin_LTLIBRARIES = libgstaudioscale.la
 noinst_LTLIBRARIES = libgstresample.la
 
-libgstaudioscale_la_SOURCES = gstaudioscale.c
-libgstaudioscale_la_CFLAGS = $(GST_CFLAGS)
-libgstaudioscale_la_LIBADD =
-libgstaudioscale_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+#libgstaudioscale_la_SOURCES = gstaudioscale.c
+#libgstaudioscale_la_CFLAGS = $(GST_CFLAGS)
+#libgstaudioscale_la_LIBADD =
+#libgstaudioscale_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gstaudioscale.h private.h
 
